Update to version 2.2.0
Signed-off-by: Elhussein Hamed <elhussein.muzamil@gmail.com>